<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
			     http://maven.apache.org/xsd/maven-4.0.0.xsd"
	 xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>monetdb</groupId>
  <artifactId>monetdb-jdbc</artifactId>
  <version>3.3</version>
  <name>${project.groupId}:${project.artifactId}</name>
  <description>MonetDB JDBC driver</description>
  <url>https://www.monetdb.org</url>

  <licenses>
    <license>
      <name>Mozilla Public License, Version 2.0</name>
      <url>https://www.mozilla.org/MPL/2.0/</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Sjoerd Mullender</name>
      <email>sjoerd@monetdb.org</email>
      <organization>MonetDB</organization>
      <organizationUrl>https://www.monetdb.org</organizationUrl>
    </developer>
  </developers>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <scm>
    <connection>scm:hg:https://dev.monetdb.org/hg/monetdb-java/</connection>
    <developerConnection>scm:hg:ssh://hg@dev.monetdb.org/monetdb-java/</developerConnection>
    <url>https://dev.monetdb.org/hg/monetdb-java/</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jdbc.sources>org/monetdb/jdbc/**/*.java</jdbc.sources>
    <mcl.sources>org/monetdb/mcl/**/*.java</mcl.sources>
  </properties>

  <build>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>3.2</version>
	<configuration>
	  <includes>
	    <include>${jdbc.sources}</include>
	    <include>${mcl.sources}</include>
	  </includes>
	  <source>8</source>
	  <target>8</target>
	  <showDeprecation>true</showDeprecation>
	  <showWarnings>true</showWarnings>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-source-plugin</artifactId>
	<version>2.2.1</version>
	<executions>
	  <execution>
	    <id>attach-sources</id>
	    <goals>
	      <goal>jar-no-fork</goal>
	    </goals>
	  </execution>
	</executions>
	<configuration>
	  <includes>
	    <include>${jdbc.sources}</include>
	    <include>${mcl.sources}</include>
	  </includes>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-javadoc-plugin</artifactId>
	<version>2.9.1</version>
	<executions>
	  <execution>
	    <id>attach-javadocs</id>
	    <goals>
	      <goal>jar</goal>
	    </goals>
	  </execution>
	</executions>
	<configuration>
	  <sourceFileIncludes>
	    <include>${jdbc.sources}</include>
	    <include>${mcl.sources}</include>
	  </sourceFileIncludes>
	  <additionalparam>-Xdoclint:none</additionalparam>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.sonatype.plugins</groupId>
	<artifactId>nexus-staging-maven-plugin</artifactId>
	<version>1.6.3</version>
	<extensions>true</extensions>
	<configuration>
	  <serverId>ossrh</serverId>
	  <nexusUrl>https://oss.sonatype.org/</nexusUrl>
	  <autoReleaseAfterClose>false</autoReleaseAfterClose>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-release-plugin</artifactId>
	<version>2.5</version>
	<configuration>
	  <autoVersionSubmodules>true</autoVersionSubmodules>
	  <useReleaseProfile>false</useReleaseProfile>
	  <releaseProfiles>release</releaseProfiles>
	  <goals>deploy</goals>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-gpg-plugin</artifactId>
	<version>1.5</version>
	<executions>
	  <execution>
	    <id>sign-artifacts</id>
	    <phase>verify</phase>
	    <goals>
	      <goal>sign</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>
    </plugins>
  </build>

</project>
